Added First component

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "node": "10"
   },
   "dependencies": {
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
